SOAP completed and REST almost done