@@ -4,9 +4,11 @@ import static org.springframework.data.jpa.domain.Specification.where;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.jws.WebService;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -15,6 +17,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import app.dao.rank.RankingDao;
 import app.dao.rank.RankingSpecification;
+import app.dto.RankingDto;
+import app.dto.RankingDtoList;
 import app.model.GameStats;
 import app.model.Ranking;
 import app.model.UserStats;
@@ -23,12 +27,10 @@ import lombok.NoArgsConstructor;
 
 @WebService(endpointInterface = "app.service.rank.RankService")
 @Service
-@AllArgsConstructor
-//@NoArgsConstructor
 @Transactional
 public class RankServiceImpl implements RankService {
 	
-	private RankingDao rankDao;
+	@Autowired private RankingDao rankDao;
 
 	@Override
 	public Ranking saveRank(UserStats stat, GameStats gameStat) {
@@ -48,19 +50,33 @@ public class RankServiceImpl implements RankService {
 	}
 
 	@Override
-	public List<Ranking> getRankList() {
-		return rankDao.findTop10ByOrderByScoreDesc();
+	public RankingDtoList getRankList() {
+		List<RankingDto> ranking = rankDao.findTop10ByOrderByScoreDesc()
+				.stream()
+				.map(RankingDto::fromRanking)
+				.collect(Collectors.toList());
+		
+		RankingDtoList dtoList = new RankingDtoList();
+		dtoList.setDtoList(ranking);
+		return dtoList;
 	}
 
 	@Override
-	public List<Ranking> getRankByMonth() {
-		
+	public RankingDtoList getRankByMonth() {
 		LocalDate ld = LocalDate.now();
 		LocalDate start = ld.withDayOfMonth(1);
 		LocalDate end = ld.withDayOfMonth(ld.lengthOfMonth());
-		
 		Pageable page = PageRequest.of(0, 10, Sort.by("score").descending());	
-		return rankDao.findAll(where(RankingSpecification.greaterThanEq(start)).and(RankingSpecification.lessThanEq(end)), page).toList();
+		
+		List<RankingDto> ranking = rankDao.findAll(where(RankingSpecification.greaterThanEq(start)).and(RankingSpecification.lessThanEq(end)), page)
+				.stream()
+				.map(RankingDto::fromRanking)
+				.collect(Collectors.toList());
+		
+		RankingDtoList dtoList = new RankingDtoList();
+		dtoList.setDtoList(ranking);
+		return dtoList;
+		
 	}
 
 }
